# Maestro

./: .dockerignore  .gitattributes  .gitignore  Makefile  README.md  docker-compose.example.yml
control-plane/: Dockerfile  docker-entrypoint.sh  pyproject.toml
control-plane/app/: __init__.py  main.py  storage.py  storage_deploys.py  storage_metrics.py  storage_migrate.py  storage_nodes.py
control-plane/app/api/: _errors.py  api_keys.py  auth.py  deploys.py  install.py  metrics.py  nodes.py  router.py  ui.py  wizard.py
control-plane/app/auth/: api_keys_repo.py  deps.py  middleware.py  passwords.py  users_repo.py
control-plane/app/config/: __init__.py  cross_deploy_validator.py  hashing.py  loader.py  renderer.py  schema.py  validator.py
control-plane/app/mcp/: server.py  tools.py
control-plane/app/metrics/: contract.py  handler.py  retention.py
control-plane/app/orchestrator/: __init__.py  diff.py  engine.py
control-plane/app/wizard/: docker_inspect.py
control-plane/app/ws/: __init__.py  hub.py  protocol.py  ui_bus.py
control-plane/tests/unit/: test_admin_daemon_enroll.py  test_api.py  test_api_apply.py  test_api_auth.py  test_api_auth_keys.py  test_api_config_shim.py  test_api_deploys.py  test_api_keys_repo.py  test_api_metrics.py  test_api_nodes.py  test_api_wizard.py  test_auth_passwords.py  test_components_hash.py  test_config_parser.py  test_cross_deploy_validator.py  test_diff.py  test_hub.py  test_install_endpoints.py  test_legacy_router_attribution.py  test_mcp_server_auth.py  test_metrics_contract.py  test_metrics_handler.py  test_metrics_retention.py  test_middleware_api_key.py  test_renderer_files.py  test_schema_metrics.py  test_storage_deploys.py  test_storage_metrics.py  test_storage_migrate.py  test_ui_bus.py  test_user_management.py  test_wizard_docker_inspect.py  test_ws_ui_endpoint.py
control-plane/web/: index.html
daemon/: go.mod  go.sum
docs/: architecture.md  phase-1-completion.md  phase-1-prototype.md  phase-2-beta.md  phase-2-completion.md  phase-3-operational-maturity.md  phase-3-production.md  phase-4-production-scale.md  protocol.md  release-checklist.md  roadmap.md  yaml-schema.md
examples/: deployment.yaml
scripts/: credentials.example.yaml  install-cp.sh  (+4 more)
(+106 files in other folders)
